# model-swap-test-poc

./: .env.example  .gitignore  LICENSE  README.md  cli.py  pyproject.toml
.github/workflows/: ci.yml
adapters/: __init__.py  anthropic_endpoint.py  factory.py  mock_endpoint.py  ollama_endpoint.py
core/: __init__.py  capability.py  contracts.py  evaluator.py  scorecard.py  state.py  stats.py  swap_test.py
docs/: architecture.md  model-swap-test.md  reference-architecture.md
evals/: README.md  phi-classification.jsonl
profiles/: models.profile.yaml
profiles/capabilities/: phi-classification.yaml
tests/: test_cli.py  test_contracts.py  test_evaluator.py  test_stats.py  test_swap_test.py
tests/fixtures/: mock_endpoint.py
